# pytest-fizzbuzz

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
fizzbuzz_testing/: fizzbuzz.py
tests/: test_fizzbuzz.py
